@@ -425,6 +425,16 @@ Should we accept self-registration with email address from the local
 domain
 EOT
 
+[guests_self_registration.mandatory_fields]
+type=multi
+options=firstname|lastname|organization|phone|mobileprovider|email|sponsor_email
+description=<<EOT
+Fields required to be filled in the self-registration form. Valid values are:
+firstname, lastname, organization, phone, mobileprovider, email, 
+sponsor_email. Basic validation of minimally required values per guest mode 
+is provided by default.
+EOT
+
 [guests_pre_registration.access_duration_choices]
 type=text
 description=<<EOT
