@@ -284,6 +284,14 @@ email_activation_timeout=10m
 #
 # Accept self-registration with email address from the local domain.
 allow_localdomain=enabled
+#
+# guests_self_registration.mandatory_fields
+#
+# Fields required to be filled in the self-registration form. Valid values are:
+# firstname, lastname, organization, phone, mobileprovider, email, 
+# sponsor_email. Basic validation of minimally required values per guest mode 
+# is provided by default.
+mandatory_fields=firstname,lastname,phone,email
 
 
 [guests_pre_registration]
